ibus-m17n (1.3.3-1) unstable; urgency=low

  * New upstream release. 
  * Fix "new upstream version 1.3.3" (Closes: #639823)

 -- Asias He <asias.hejun@gmail.com>  Sat, 03 Sep 2011 23:43:18 +0800

ibus-m17n (1.3.2-1) unstable; urgency=low

  * New upstream release.

 -- LI Daobing <lidaobing@debian.org>  Wed, 09 Mar 2011 00:02:15 +0800

ibus-m17n (1.3.1-1) unstable; urgency=low

  [ Asias He ]
  * New upstream release.
  * debian/watch: use http://googlecode.debian.net

  [ LI Daobing ]
  * debian/control: build depends on libgtk2.0-dev 

 -- LI Daobing <lidaobing@debian.org>  Sat, 04 Sep 2010 22:17:41 +0800

ibus-m17n (1.3.0-2) unstable; urgency=low

  [ Asias He ]
  * debian/control:
    - set maintainer to pkg-ime, add LI Daobing <lidaobing@debian.org> 
      & Asias He <asias.hejun@gmail.com> to uploaders.
    - update Vcs-* fields.

  [ LI Daobing ]
  * debian/control:
    - bump standards version to 3.9.1.
  * debian/watch:
    - updated.
  * Fix "Does not provide any input methods" (Closes: #593315)
    - rebuild can fix this bug.

 -- LI Daobing <lidaobing@debian.org>  Tue, 17 Aug 2010 22:57:14 +0800

ibus-m17n (1.3.0-1) unstable; urgency=low

  * New upstream release.
  * debian/source/format: 3.0.

 -- LI Daobing <lidaobing@debian.org>  Sat, 03 Apr 2010 21:08:51 +0800

ibus-m17n (1.2.99.20100202-1) experimental; urgency=low

  * New upstream release.
  * debian/control: bump standards version to 3.8.4.
  * debian/control: switch to ibus 1.3.

 -- LI Daobing <lidaobing@debian.org>  Sun, 21 Mar 2010 19:08:48 +0800

ibus-m17n (1.2.0.20091217-1) unstable; urgency=low

  * New upstream release.

 -- LI Daobing <lidaobing@debian.org>  Thu, 17 Dec 2009 20:12:36 +0800

ibus-m17n (1.2.0.20091120-1) unstable; urgency=low

  * New upstream release.

 -- LI Daobing <lidaobing@debian.org>  Sun, 22 Nov 2009 12:36:08 +0800

ibus-m17n (1.2.0.20090930-1) unstable; urgency=low

  * new upstream release.
  * debian/control: bump standards version to 3.8.3.
